--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -119,7 +119,7 @@
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="0dp"
-        android:layout_height="133dp"
+        android:layout_height="150dp"
         android:gravity="center"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
@@ -127,8 +127,8 @@
         app:layout_constraintTop_toTopOf="@+id/view5">
 
         <androidx.cardview.widget.CardView
-            android:layout_width="100dp"
-            android:layout_height="120dp"
+            android:layout_width="wrap_content"
+            android:layout_height="145dp"
             android:layout_margin="10dp"
             app:cardCornerRadius="10dp"
             app:cardElevation="3dp">
@@ -182,8 +182,8 @@
         </androidx.cardview.widget.CardView>
 
         <androidx.cardview.widget.CardView
-            android:layout_width="100dp"
-            android:layout_height="120dp"
+            android:layout_width="wrap_content"
+            android:layout_height="145dp"
             android:layout_margin="10dp"
             app:cardCornerRadius="10dp"
             app:cardElevation="3dp"
