--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -186,8 +186,7 @@
             android:layout_height="145dp"
             android:layout_margin="10dp"
             app:cardCornerRadius="10dp"
-            app:cardElevation="3dp"
-            tools:ignore="TextSizeCheck">
+            app:cardElevation="3dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
