--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -220,7 +220,7 @@
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
-                        app:srcCompat="?android:attr/fingerprintAuthDrawable" />
+                        app:srcCompat="@android:drawable/ic_menu_sort_by_size" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -228,7 +228,7 @@
                     android:id="@+id/textViewProfile"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@string/profile"
+                    android:text="@string/history"
                     android:textAlignment="center"
                     android:textStyle="bold" />
             </LinearLayout>
