--- a/app/src/main/res/layout/activity_save_trip_step1.xml
+++ b/app/src/main/res/layout/activity_save_trip_step1.xml
@@ -180,7 +180,7 @@
             tools:ignore="TextContrastCheck" />
 
         <TextView
-            android:id="@+id/TextViewCountry"
+            android:id="@+id/TextViewEBudget"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="48dp"
@@ -222,7 +222,7 @@
             android:textColor="@color/white"
             android:textColorHint="@color/transperent_white"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/TextViewCountry"
+            app:layout_constraintTop_toBottomOf="@+id/TextViewEBudget"
             tools:ignore="TextContrastCheck" />
 
         <View
