--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -200,7 +200,7 @@
                     android:layout_margin="16dp">
 
                     <Button
-                        android:id="@+id/buttonProfile"
+                        android:id="@+id/buttonHistory"
                         android:layout_width="0dp"
                         android:layout_height="0dp"
                         android:backgroundTint="#C8BEF6"
