--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -104,8 +104,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="28dp"
         android:text="@string/username"
-        android:textStyle="bold"
+        android:textColor="#5d5a63"
         android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.101"
         app:layout_constraintStart_toStartOf="parent"
@@ -135,6 +136,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="28dp"
         android:text="@string/password"
+        android:textColor="#5d5a63"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -177,6 +179,7 @@
             android:layout_marginEnd="32dp"
             android:backgroundTint="@color/violet"
             android:text="@string/log_in"
+            android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/buttonSignUp"
             app:layout_constraintHorizontal_bias="0.444"
@@ -191,6 +194,7 @@
             android:layout_marginEnd="76dp"
             android:backgroundTint="@color/violet"
             android:text="@string/sign_in"
+            android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -202,6 +206,7 @@
             android:layout_height="wrap_content"
             android:backgroundTint="@color/violet"
             android:text="@string/previous"
+            android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
