--- a/app/src/main/res/layout/activity_save_trip_step1.xml
+++ b/app/src/main/res/layout/activity_save_trip_step1.xml
@@ -185,9 +185,10 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="48dp"
             android:text="@string/country_name"
+            android:textAlignment="center"
+            android:textColor="#5d5a63"
             android:textSize="18sp"
             android:textStyle="bold"
-            android:textAlignment="center"
             app:layout_constraintEnd_toStartOf="@+id/divider8"
             app:layout_constraintHorizontal_bias="0.438"
             app:layout_constraintStart_toStartOf="parent"
@@ -201,6 +202,7 @@
             android:layout_marginEnd="12dp"
             android:text="@string/city_name"
             android:textAlignment="center"
+            android:textColor="#5d5a63"
             android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
@@ -269,6 +271,7 @@
             android:layout_marginTop="162dp"
             android:text="@string/travel_start_date"
             android:textAlignment="center"
+            android:textColor="#5d5a63"
             android:textSize="14sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -295,9 +298,10 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="36dp"
             android:text="@string/TextViewTitleTrip"
+            android:textAlignment="center"
+            android:textColor="#5d5a63"
             android:textSize="18sp"
             android:textStyle="bold"
-            android:textAlignment="center"
             app:layout_constraintBottom_toTopOf="@+id/divider8"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -321,6 +325,7 @@
             android:layout_marginEnd="60dp"
             android:backgroundTint="@color/violet"
             android:text="@string/next"
+            android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -333,6 +338,7 @@
             android:layout_marginEnd="16dp"
             android:backgroundTint="@color/violet"
             android:text="@string/previous"
+            android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/buttonNext"
             app:layout_constraintStart_toStartOf="parent"
