--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -73,17 +73,18 @@
         android:id="@+id/ButtonContinue"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintHeight_min="80dp"
-        app:layout_constraintWidth_min="190dp"
         android:layout_marginTop="80dp"
         android:backgroundTint="@color/violet"
         android:text="@string/open_the_magic_door_to_the_world_of_travel"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="@+id/view"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_min="80dp"
         app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/TextViewPresentation"
-        app:layout_constraintVertical_bias="0.06" />
+        app:layout_constraintVertical_bias="0.06"
+        app:layout_constraintWidth_min="190dp" />
 
     <TextView
         android:id="@+id/TextViewCopyRight"
