--- a/app/src/main/res/layout/activity_save_trip_step2.xml
+++ b/app/src/main/res/layout/activity_save_trip_step2.xml
@@ -111,6 +111,7 @@
         android:layout_marginTop="12dp"
         android:text="@string/rate_the_accommodation"
         android:textAlignment="center"
+        android:textColor="#5d5a63"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="@+id/TextViewStarSafety"
@@ -149,6 +150,7 @@
         android:layout_marginTop="12dp"
         android:text="@string/rate_the_safety_level"
         android:textAlignment="center"
+        android:textColor="#5d5a63"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="@+id/TextViewStarNature"
@@ -161,6 +163,7 @@
         android:layout_marginTop="16dp"
         android:text="@string/rate_the_natural_beauty"
         android:textAlignment="center"
+        android:textColor="#5d5a63"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="@+id/TextViewStarHumans"
@@ -173,6 +176,7 @@
         android:layout_marginTop="16dp"
         android:text="@string/rate_the_quality_of_human_interactions"
         android:textAlignment="center"
+        android:textColor="#5d5a63"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="@+id/TextViewStarAmbianceCity"
@@ -185,6 +189,7 @@
         android:layout_marginTop="32dp"
         android:text="@string/rate_the_ambiance"
         android:textAlignment="center"
+        android:textColor="#5d5a63"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="@+id/TextViewRBudget"
@@ -198,6 +203,7 @@
         android:layout_marginTop="16dp"
         android:text="@string/etimated_budget"
         android:textAlignment="center"
+        android:textColor="#5d5a63"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -210,6 +216,7 @@
         android:layout_marginTop="40dp"
         android:text="@string/budget_spent"
         android:textAlignment="center"
+        android:textColor="#5d5a63"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="@+id/TextViewEBudget"
@@ -274,6 +281,7 @@
             android:backgroundTint="@color/violet"
             android:minWidth="130dp"
             android:text="@string/save"
+            android:textColor="@color/white"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -286,6 +294,7 @@
             android:backgroundTint="@color/violet"
             android:minWidth="130dp"
             android:text="@string/summary"
+            android:textColor="@color/white"
             app:layout_constraintStart_toEndOf="@id/buttonSave"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -298,6 +307,7 @@
             android:backgroundTint="@color/violet"
             android:minWidth="130dp"
             android:text="@string/previous"
+            android:textColor="@color/white"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/buttonSave" />
 
@@ -310,6 +320,7 @@
             android:backgroundTint="@color/violet"
             android:minWidth="130dp"
             android:text="@string/cancel"
+            android:textColor="@color/white"
             app:layout_constraintStart_toEndOf="@id/buttonPrev"
             app:layout_constraintTop_toBottomOf="@id/buttonSummary" />
 
