--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -195,6 +195,7 @@
             android:layout_marginTop="64dp"
             android:backgroundTint="@color/violet"
             android:text="@string/complete_my_registration"
+            android:textColor="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -205,6 +206,7 @@
             android:layout_height="wrap_content"
             android:backgroundTint="@color/violet"
             android:text="@string/previous"
+            android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
