--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -247,6 +247,7 @@
         android:layout_marginBottom="12dp"
         android:text="@string/adventuresync_technologies_n_2018_2024"
         android:textAlignment="center"
+        android:textColor="#5d5a63"
         android:textSize="7sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/ImageCopyRight"
