--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -92,6 +92,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="12dp"
         android:text="@string/adventuresync_technologies_n_2018_2024"
+        android:textColor="#5d5a63"
         android:textAlignment="center"
         android:textSize="7sp"
         app:layout_constraintBottom_toBottomOf="parent"
