--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -9,7 +9,7 @@
     tools:context=".HistoryActivity">
 
     <View
-        android:id="@+id/view7"
+        android:id="@+id/viewTopDivider"
         android:layout_width="0dp"
         android:layout_height="4dp"
         android:background="@color/light_lavender"
